--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <title>freecodecamp-git</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1>Welcome to you taherallaa</h1>
-  </body>
+
+<head>
+  <title>freecodecamp-git</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="css/style.css" rel="stylesheet" />
+</head>
+
+<body>
+  <h1>Welcome to you taherallaa</h1>
+  <p>
+    Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
+    sint consectetur cupidatat.
+  </p>
+</body>
+
 </html>
