add form containing username, email, password field.#1

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint cillum
     sint consectetur cupidatat.
   </p>
+  <form>
+    <input type="text" name="username" value="" />
+    <input type="email" name="email" value="" />
+    <input type="password" name="password" value="" />
+  </form>
 </body>
 
 </html>
